Fixed faq issue visible in mobile

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2836,4 +2836,20 @@ blockquote {
     padding: 80px 0;
 }
 
+#questions,
+.faq-section {
+  padding-top: 100px;
+  scroll-margin-top: 100px;
+}
+
+.faq-item {
+  position: relative;
+  z-index: 1;
+}
+
+.faq-question {
+  position: relative;
+  z-index: 2;
+}
+
 
